tests/functional/lang/eval-fail-scope-5.err.exp
error:
       … from call site
         at /pwd/lang/eval-fail-scope-5.nix:7:3:
            6| in
            7|   f {}
             |   ^
            8|

       … while calling 'f'
         at /pwd/lang/eval-fail-scope-5.nix:5:7:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |       ^
            6| in

       error: infinite recursion encountered
       at /pwd/lang/eval-fail-scope-5.nix:5:12:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |            ^
            6| in
